# real_time_simulator

./: README.md  pyproject.toml
real_time_simulator/: gui.py  main.py
real_time_simulator/algorithms/: round_robin.py
real_time_simulator/algorithms/base/: algorithm.py
