[tool.poetry]
name = "real-time-simulator"
version = "0.1.0"
description = ""
authors = ["Carlos Cerqueira <ce.cesc01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.8.0"
matplotlib = "^3.10.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
